# BPI-EAI80-bsp

./: README.md  setup.sh
ugelis/ext/lib/crypto/mbedtls/: CMakeLists.txt  Kconfig  README
ugelis/ext/lib/crypto/mbedtls/configs/: config-mini-dtls1_2.h  config-mini-tls1_2.h
ugelis/ext/lib/encoding/tinycbor/: CMakeLists.txt
ugelis/ext/lib/ipc/open-amp/: CMakeLists.txt
ugelis/ext/lib/ipc/open-amp/open-amp/cmake/: options.cmake  syscheck.cmake
ugelis/ext/lib/ipc/open-amp/open-amp/lib/: CMakeLists.txt
ugelis/lib/posix/: CMakeLists.txt  clock.c  pthread_cond.c  semaphore.c  timer.c
ugelis/subsys/: CMakeLists.txt  Kconfig
ugelis/subsys/app_memory/: CMakeLists.txt
ugelis/subsys/console/: CMakeLists.txt  getchar.c  line_fifo.c
ugelis/subsys/cpp/: CMakeLists.txt
ugelis/subsys/debug/: CMakeLists.txt  Kconfig
ugelis/subsys/dfu/boot/: CMakeLists.txt  mcuboot.c
ugelis/subsys/dfu/img_util/: CMakeLists.txt  flash_img.c
ugelis/subsys/disk/: CMakeLists.txt  Kconfig  disk_access.c  disk_access_usb.c  gm_usb_disk.h
ugelis/subsys/edgui/: edgui.uvoptx  edgui.uvprojx
ugelis/subsys/edgui/edgui/: edgui.h  edgui_conf.h
ugelis/subsys/edgui/edgui_core/: edgui_disp.c  edgui_disp.h  edgui_indev.c  edgui_obj.h  edgui_refr.c  edgui_refr.h  edgui_style.c
ugelis/subsys/edgui/edgui_draw/: edgui_draw.c  edgui_draw.h  edgui_draw_arc.c  edgui_draw_basic.c  edgui_draw_img.h  edgui_draw_label.c  edgui_draw_line.h  edgui_draw_rect.c  edgui_img_cache.c  edgui_img_cache.h  edgui_img_decoder.h
ugelis/subsys/edgui/edgui_font/: edgui_font.c  edgui_font_fmt_txt.c  edgui_font_roboto_16.c  edgui_font_roboto_22.c  edgui_font_unscii_8.c
ugelis/subsys/edgui/edgui_hal/: edgui_hal_disp.c  edgui_hal_disp.h  edgui_hal_indev.c
ugelis/subsys/edgui/edgui_misc/: edgui_circ.c  edgui_circ.h  edgui_color.c  edgui_color.h  edgui_fs.c  edgui_gc.h  edgui_ll.c  edgui_mem.c  edgui_mem.h  edgui_templ.c  edgui_templ.h  edgui_types.h
ugelis/subsys/edgui/edgui_objx/: edgui_arc.c  edgui_arc.h  edgui_bar.c  edgui_btn.c  edgui_btn.h  edgui_btnm.h  edgui_calendar.c  edgui_chart.c  edgui_ddlist.c  edgui_gauge.c  edgui_gauge.h  edgui_imgbtn.c  edgui_kb.c  edgui_label.h  edgui_led.c  edgui_line.c  edgui_list.h  edgui_lmeter.h  edgui_mbox.h  edgui_page.c  edgui_preload.c  edgui_roller.h  edgui_slider.h  edgui_spinbox.h  edgui_sw.c  edgui_ta.h  edgui_tabview.h  edgui_tileview.c  edgui_tileview.h  edgui_win.c
ugelis/subsys/edgui/edgui_port/: edgui_port_disp.c  edgui_port_disp.h  edgui_port_fs.h  edgui_port_indev.c
ugelis/subsys/edgui/edgui_themes/: edgui_theme.h  edgui_theme_alien.c  edgui_theme_default.c  edgui_theme_material.c  edgui_theme_mono.h  edgui_theme_night.c  edgui_theme_night.h  edgui_theme_zen.c
ugelis/subsys/fs/: CMakeLists.txt  Kconfig
ugelis/subsys/fs/devram/: CMakeLists.txt  devramfs.c
ugelis/subsys/fs/fat/: CMakeLists.txt  README
ugelis/subsys/fs/fat/option/: syscall.c
ugelis/subsys/fs/fcb/: CMakeLists.txt
ugelis/subsys/fs/nvs/: CMakeLists.txt
ugelis/subsys/logging/: CMakeLists.txt  sys_log_net.c
ugelis/subsys/mgmt/: CMakeLists.txt  smp.c  smp_bt.c  smp_shell.c  smp_uart.c
ugelis/subsys/mm/: CMakeLists.txt  dlmalloc.h  dlmemory.c  malloc_ext.c  mem_ext.c  mem_ext.h
ugelis/subsys/random/: CMakeLists.txt  rand32_timer.c
ugelis/subsys/rpc/: CMakeLists.txt  Kconfig
ugelis/subsys/rpc/core/: CMakeLists.txt  rpc_internal.h
ugelis/subsys/rpc/plugin/: CMakeLists.txt  rpc_plugin_imp.c
ugelis/subsys/rpc/plugin/src/inc/cam/: camera.h
ugelis/subsys/rpc/plugin/src/processor/: ops_process.c  ops_save.c  processor.c
ugelis/subsys/settings/: CMakeLists.txt
ugelis/subsys/settings/src/: CMakeLists.txt  settings_init.c  settings_store.c
ugelis/subsys/shell/: CMakeLists.txt  Kconfig
ugelis/subsys/shell/modules/: CMakeLists.txt  Kconfig  kernel_service.c
ugelis/subsys/storage/flash_map/: CMakeLists.txt  flash_map_default.c
ugelis/subsys/usb/: CMakeLists.txt  Kconfig  bos.c  os_desc.c
ugelis/subsys/usb/class/: CMakeLists.txt  mass_storage.c
ugelis/subsys/usb/class/hid/: CMakeLists.txt
ugelis/subsys/usb/class/netusb/: CMakeLists.txt  function_eem.c
ugelis/subsys/usb_gm/: CMakeLists.txt  Kconfig
ugelis/subsys/usb_gm/device/: CMakeLists.txt  usb_device.h  usb_device_class.c  usb_device_khci.c
ugelis/subsys/usb_gm/device/class/: CMakeLists.txt  readme.txt
ugelis/subsys/usb_gm/device/class/audio/: usb_device_audio.h
ugelis/subsys/usb_gm/device/class/hid/: usb_device_hid.c  usb_device_hid.h
ugelis/subsys/usb_gm/device/class/msc/: CMakeLists.txt  usb_device_msc.h  usb_device_msc_ufi.c  usb_device_msc_ufi.h
ugelis/subsys/usb_gm/device/class/video/: usb_device_video.h
ugelis/subsys/usb_gm/host/: CMakeLists.txt  usb_host_framework.c  usb_host_hci.h  usb_host_khci.c  usb_host_khci.h
ugelis/subsys/usb_gm/host/class/: usb_host_hub.c
ugelis/subsys/usb_gm/host/class/cdc/: CMakeLists.txt  usb_host_cdc.c
ugelis/subsys/usb_gm/host/class/hid/: CMakeLists.txt  usb_host_hid.h
ugelis/subsys/usb_gm/host/class/msc/: CMakeLists.txt  usb_host_msd.c  usb_host_msd.h
ugelis/subsys/usb_gm/host/class/phdc/: CMakeLists.txt  usb_host_phdc.c
ugelis/subsys/usb_gm/host/class/printer/: CMakeLists.txt
ugelis/subsys/usb_gm/include/: usb_khci.h  usb_spec.h
ugelis/subsys/usb_gm/osa/: usb_osa_ugelisos.c  usb_osa_ugelisos.h
ugelis/subsys/ust/: CMakeLists.txt  Kconfig
ugelis/subsys/ust/core/: CMakeLists.txt  ust_element.c  ust_queue.c
ugelis/subsys/ust/plugin/: CMakeLists.txt  Kconfig
ugelis/subsys/ust/plugin/camera/: CMakeLists.txt  Kconfig
ugelis/subsys/ust/plugin/edge/: CMakeLists.txt  Kconfig
ugelis/subsys/ust/plugin/filter/: CMakeLists.txt  Kconfig
ugelis/subsys/ust/plugin/lcd/: CMakeLists.txt  Kconfig  ust_lcd.c
ugelis/subsys/ust/plugin/test_element/: CMakeLists.txt  Kconfig  sink_element.h  src_element.h
ugelis/ugelis_example/example/ai_example/ai/: CMakeLists.txt  prj.conf  readme.txt
ulibs/midware/usb/host/class/: CMakeLists.txt  Kconfig
ulibs/midware/usb/host/class/audio/: CMakeLists.txt
ulibs/midware/usb/host/class/msc/: usb_host_msd.c
(+4953 files in other folders)
