add_subdirectory_ifdef(CONFIG_APP_SHARED_MEM       app_memory)
add_subdirectory(debug)
add_subdirectory(logging)
add_subdirectory_ifdef(CONFIG_BT                   bluetooth)
add_subdirectory_ifdef(CONFIG_CONSOLE_SUBSYS       console)
add_subdirectory_ifdef(CONFIG_CONSOLE_SHELL        shell)
add_subdirectory_ifdef(CONFIG_CPLUSPLUS            cpp)
add_subdirectory_ifdef(CONFIG_DISK_ACCESS          disk)
add_subdirectory(fs)
add_subdirectory_ifdef(CONFIG_MCUMGR               mgmt)
add_subdirectory_ifdef(CONFIG_MCUBOOT_IMG_MANAGER  dfu)
add_subdirectory_ifdef(CONFIG_NET_BUF              net)
add_subdirectory_ifdef(CONFIG_USB                  usb)
add_subdirectory_ifdef(CONFIG_GM_USB_DEVICE_STACK  usb_gm)
add_subdirectory_ifdef(CONFIG_GM_USB_HOST_STACK    usb_gm)
add_subdirectory(random)
add_subdirectory(storage)
add_subdirectory_ifdef(CONFIG_SETTINGS             settings)
if(CONFIG_SDRAM_BOOT)
add_subdirectory(mm)
endif()
if(CONFIG_SLAVE_SDRAM)
add_subdirectory(mm)
endif()
add_subdirectory_ifdef(CONFIG_UST                  ust)
add_subdirectory_ifdef(CONFIG_RPC_SUBSYS           rpc)

